--- a/Demos/Captioning_GRAD_CAM.ipynb
+++ b/Demos/Captioning_GRAD_CAM.ipynb
@@ -36,7 +36,7 @@
     "from ptcap.grad_cam_videos import GradCam\n",
     "from ptcap.data.annotation_parser import V2Parser\n",
     "\n",
-    "sys.path.insert(0, \"../\")"
+    "sys.path.insert(0, \"../\") "
    ]
   },
   {
@@ -132,8 +132,7 @@
     "    labels = validation_parser.get_captions()\n",
     "    return ((os.path.join(root_path, f), label) for f, label in zip(files, labels))\n",
     "path_gen = path_generator('/data/20bn-something-something-v2/v2-train.json', \n",
-    "                          '/data/20bn-something-something-v2/')\n",
-    "\n"
+    "                          '/data/20bn-something-something-v2/')"
    ]
   },
   {
@@ -254,10 +253,10 @@
     {
      "ename": "SyntaxError",
      "evalue": "invalid syntax (<ipython-input-17-37efe3fe8bb1>, line 1)",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-37efe3fe8bb1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def calc_cam(token_index)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -287,13 +286,13 @@
     {
      "ename": "NameError",
      "evalue": "name 'cam' is not defined",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-18-3cf7f32829bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaximum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'cam' is not defined"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -306,7 +305,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "path_to_video, label = next(path_gen)\n",
     "\n",
     "video_uint8 = reader.open(path_to_video)\n",
@@ -315,7 +313,7 @@
     "# Convert to torch variable\n",
     "video = Variable(torch.from_numpy(video[None]), volatile=False).cuda()\n",
     "\n",
-    "tokens = tokenizer.encode_caption(label)\n"
+    "tokens = tokenizer.encode_caption(label)"
    ]
   },
   {
@@ -324,7 +322,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "##modedl\n",
     "gradients = []\n",
     "\n",
@@ -354,10 +351,7 @@
     "net.module.encoder.lstm.flatten_parameters()\n",
     "h, _ = net.module.encoder.lstm(h) \n",
     "\n",
-    "dec = net.module.decoder(h, Variable(torch.zeros([1, 1])).long().cuda())\n",
-    "\n",
-    "\n",
-    "    "
+    "dec = net.module.decoder(h, Variable(torch.zeros([1, 1])).long().cuda())"
    ]
   },
   {
@@ -541,9 +535,7 @@
     "        plt.imshow(single_cam)\n",
     "        plt.subplot(1, 2, 2)\n",
     "        plt.imshow(video_uint8[gg])\n",
-    "        plt.show()\n",
-    "\n",
-    "    \n"
+    "        plt.show()"
    ]
   },
   {
@@ -846,7 +838,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -858,7 +852,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -869,5 +863,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
