--- a/Demos/Classif_GRAD_CAM.ipynb
+++ b/Demos/Classif_GRAD_CAM.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# all_templates = sorted(set(validation_parser.annotations[\"template\"]))\n",
@@ -264,7 +266,7 @@
    "outputs": [],
    "source": [
     "# path = '/home/farzaneh/PycharmProjects/pytorch-captioning/results/clapnet_balanced_tokens/'\n",
-    "path = '/home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_32_c3_32_labels_cutoff5_cassif1_cap0/'\n",
+    "path = '/home/farzaneh/PycharmProjects/pytorch-captioning/results/ECCV/v2_gulp160_two_stream_c2_32_c3_32_labels_cutoff5_classif1_cap0/'\n",
     "\n",
     "checkpoint = torch.load(path + '/model.best')\n",
     "\n",
@@ -362,218 +364,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Tokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ptcap.data.tokenizer import Tokenizer\n",
-    "\n",
-    "USER_MAXLEN=17\n",
-    "tokenizer = Tokenizer(user_maxlen=USER_MAXLEN)\n",
-    "tokenizer.load_dictionaries(path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model Layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "def run_model2(net, video):\n",
-    "\n",
-    "    gradients = []\n",
-    "    layer_feats = []\n",
-    "    x = video\n",
-    "    ###########################################################################################\n",
-    "\n",
-    "#     for name, module in net.module.encoder.c3d_extractor._modules.items():\n",
-    "#         print(name)\n",
-    "#         x = module(x)\n",
-    "#         if \"conv4\" in name:\n",
-    "#             x.register_hook(lambda grad:gradients.append(grad))\n",
-    "#             print(\"U\"*10)\n",
-    "#             print(gradients)\n",
-    "#             print(\"grad appended\")\n",
-    "#             layer_feats += [x]\n",
-    "\n",
-    "#     x = x.view(x.size()[0:3])  # [batch_size*num_feature*num_step](8*256*48)\n",
-    "#     c3d2 = x.permute(0, 2, 1)\n",
-    "#     layer_feats = layer_feats[0]\n",
-    "#     print(gradients)\n",
-    "#     ###########################################################################################\n",
-    "    conv1_feats = net.module.encoder.c3d_extractor.conv1(video)\n",
-    "    pool1_feats = net.module.encoder.c3d_extractor.pool1(conv1_feats)\n",
-    "\n",
-    "    conv2_feats = net.module.encoder.c3d_extractor.conv2(pool1_feats)\n",
-    "    pool2_feats = net.module.encoder.c3d_extractor.pool2(conv2_feats)\n",
-    "\n",
-    "    conv3_feats = net.module.encoder.c3d_extractor.conv3(pool2_feats)  \n",
-    "\n",
-    "    pool3_feats = net.module.encoder.c3d_extractor.pool3(conv3_feats)  \n",
-    "\n",
-    "    conv4_feats = net.module.encoder.c3d_extractor.conv4(pool3_feats) \n",
-    "\n",
-    "\n",
-    "    conv5_feats = net.module.encoder.c3d_extractor.conv5(conv4_feats)   \n",
-    "    conv6_feats = net.module.encoder.c3d_extractor.conv6(conv5_feats)   \n",
-    "    \n",
-    " # REGISTER HOOK ##\n",
-    "    layer_feats = conv6_feats\n",
-    "    conv6_feats.register_hook(lambda grad:gradients.append(grad))\n",
-    "\n",
-    "    pool4_feats = net.module.encoder.c3d_extractor.pool4(conv6_feats)   \n",
-    "\n",
-    "\n",
-    "    pool4_feats = pool4_feats.view(pool4_feats.size()[0:3])   \n",
-    "\n",
-    "    c3d2 = pool4_feats.permute(0, 2, 1)   \n",
-    "\n",
-    "#     c3d2 = net.module.encoder.c3d_extractor.extract_features(video)\n",
-    "    ###########################################################################################\n",
-    "    c2d2 = net.module.encoder.c2d_extractor.extract_features(video)\n",
-    "\n",
-    "    h2 = torch.cat([c2d2, c3d2 ], 2)\n",
-    "\n",
-    "    #net.module.encoder.lstm.flatten_parameters()\n",
-    "    lstm_outputs2, _ = net.module.encoder.lstm(h2) \n",
-    "    oo =  net.module.encoder.dropout(net.module.encoder.relu(net.module.encoder.fc(lstm_outputs2)))\n",
-    "\n",
-    "        #h = net.module.encoder.extract_features(video)\n",
-    "    net_classif_output2 = net.module.predict_from_encoder_features(oo)\n",
-    "\n",
-    "    return net_classif_output2,h2, lstm_outputs2, c2d2, c3d2, layer_feats, gradients"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "def run_model(net, input_tuple ):\n",
-    "    video, caption = input_tuple\n",
-    "    probs, classif_probs1, h1, lstm_outputs1, c2d1, c3d1 = net((video, caption), False)\n",
-    "    return classif_probs1, h1, lstm_outputs1, c2d1, c3d1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## CAM calculating"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calc_cam(net, net_output, layer_feats, target_index, vocab_size, gradients, token_counter):\n",
-    "\n",
-    "    one_hot = np.zeros((1, vocab_size), dtype=np.float32)\n",
-    "    one_hot[0][target_index] = 1\n",
-    "    one_hot = Variable(torch.from_numpy(one_hot), requires_grad=True)\n",
-    "    one_hot = torch.sum(one_hot.cuda() * net_output)\n",
-    "    \n",
-    "    net.module.encoder.c2d_extractor.conv4.zero_grad()\n",
-    "    #net.module.classif_layer.zero_grad()\n",
-    "    one_hot.backward(retain_graph=True)\n",
-    "    print(\"backward\"*10)\n",
-    "\n",
-    "    grads_val = gradients[0].cpu().data.numpy() #take the only element out of gradients list\n",
-    "    feats_numpy = layer_feats.cpu().data.numpy()[0, :] #first sample of batch\n",
-    "    weights = np.mean(grads_val, axis=(2, 3, 4))[0, :]   #grads_val: (1, 256, 48, 10, 10)\n",
-    "    cam = np.ones(feats_numpy.shape[1:], dtype=np.float32)\n",
-    "    weights = weights / weights.max()\n",
-    "    for ii, ww in enumerate(weights):\n",
-    "        cam += ww * feats_numpy[ii, :, :, :]\n",
-    "    #     cam = np.maximum(cam, 0)\n",
-    "    return cam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "path_to_video, _, classif_label = next(path_gen)\n",
-    "# path_to_video = '/data/20bn-something-something-v2/149631.webm'\n",
-    "\n",
-    "# classif_label = 47\n",
-    "\n",
-    "video_uint8 = reader.open(path_to_video)\n",
-    "video = preprocessor(video_uint8)\n",
-    "video = Variable(torch.from_numpy(video[None]), volatile=False).cuda()\n",
-    "empty_caption = Variable(torch.zeros([1, 1]), volatile=True).long().cuda()\n",
-    "\n",
-    "\n",
-    "vocab_size = 178\n",
-    "\n",
-    "\n",
-    "\n",
-    "all_cams = []\n",
-    "\n",
-    "\n",
-    "target_index =  classif_label\n",
-    "\n",
-    "##model\n",
-    "net_output, h, lstm_out, c2d, c3d  = run_model(net, (video, empty_caption))\n",
-    "_,predind  = torch.max(net_output, dim=1)\n",
-    "print(\"pppppp\"*10)\n",
-    "\n",
-    "\n",
-    "net2_output, h2, lstm_out2, c2d2, c3d2, layer_feats, gradients = run_model2(net,video )\n",
-    "_, goh2 = torch.max(net2_output , dim=1)\n",
-    "cam = calc_cam(net, net2_output, layer_feats, target_index, vocab_size, gradients, 0)\n",
-    "\n",
-    "\n",
-    "print(int2label[classif_label])\n",
-    "print( [classif_label])\n",
-    "print( [predind.data.cpu().numpy()[0]])\n",
-    "print( [goh2.data.cpu().numpy()[0]])\n",
-    "print(\"*\"*15)\n",
-    "\n",
-    "for gg in range(1,video_uint8.shape[0], 2):\n",
-    "    plt.figure(figsize=(12, 6))\n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    single_cam = cam[gg]\n",
-    "    single_cam = cv2.resize(single_cam, (224, 224))\n",
-    "    single_cam = single_cam - np.min(single_cam)\n",
-    "    single_cam = single_cam / np.max(single_cam)\n",
-    "    plt.imshow(single_cam)\n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    plt.imshow(video_uint8[gg])\n",
-    "    plt.show()\n",
-    "    all_cams.append(single_cam)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "class UnNormalize(object):\n",
@@ -616,11 +411,232 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ptcap.data.tokenizer import Tokenizer\n",
+    "\n",
+    "USER_MAXLEN=17\n",
+    "tokenizer = Tokenizer(user_maxlen=USER_MAXLEN)\n",
+    "tokenizer.load_dictionaries(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def run_model2(net, video):\n",
+    "\n",
+    "    gradients = []\n",
+    "    layer_feats = []\n",
+    "    x = video\n",
+    "    ###########################################################################################\n",
+    "\n",
+    "#     for name, module in net.module.encoder.c3d_extractor._modules.items():\n",
+    "#         print(name)\n",
+    "#         x = module(x)\n",
+    "#         if \"conv4\" in name:\n",
+    "#             x.register_hook(lambda grad:gradients.append(grad))\n",
+    "#             print(\"U\"*10)\n",
+    "#             print(gradients)\n",
+    "#             print(\"grad appended\")\n",
+    "#             layer_feats += [x]\n",
+    "\n",
+    "#     x = x.view(x.size()[0:3])  # [batch_size*num_feature*num_step](8*256*48)\n",
+    "#     c3d2 = x.permute(0, 2, 1)\n",
+    "#     layer_feats = layer_feats[0]\n",
+    "#     print(gradients)\n",
+    "#     ###########################################################################################\n",
+    "    conv1_feats = net.module.encoder.c2d_extractor.conv1(video)\n",
+    "    pool1_feats = net.module.encoder.c2d_extractor.pool1(conv1_feats)\n",
+    "\n",
+    "    conv2_feats = net.module.encoder.c2d_extractor.conv2(pool1_feats)\n",
+    "    pool2_feats = net.module.encoder.c2d_extractor.pool2(conv2_feats)\n",
+    "\n",
+    "    conv3_feats = net.module.encoder.c2d_extractor.conv3(pool2_feats)  \n",
+    "\n",
+    "    pool3_feats = net.module.encoder.c2d_extractor.pool3(conv3_feats)  \n",
+    "\n",
+    "    conv4_feats = net.module.encoder.c2d_extractor.conv4(pool3_feats) \n",
+    "\n",
+    "\n",
+    "    conv5_feats = net.module.encoder.c2d_extractor.conv5(conv4_feats)   \n",
+    "    conv6_feats = net.module.encoder.c2d_extractor.conv6(conv5_feats)   \n",
+    "    \n",
+    " # REGISTER HOOK ##\n",
+    "    layer_feats = conv4_feats\n",
+    "    conv4_feats.register_hook(lambda grad:gradients.append(grad))\n",
+    "\n",
+    "    pool4_feats = net.module.encoder.c2d_extractor.pool4(conv6_feats)   \n",
+    "\n",
+    "\n",
+    "    pool4_feats = pool4_feats.view(pool4_feats.size()[0:3])   \n",
+    "\n",
+    "    c2d2 = pool4_feats.permute(0, 2, 1)   \n",
+    "\n",
+    "    c3d2 = net.module.encoder.c3d_extractor.extract_features(video)\n",
+    "    ###########################################################################################\n",
+    "    #c2d2 = net.module.encoder.c2d_extractor.extract_features(video)\n",
+    "\n",
+    "    h2 = torch.cat([c2d2, c3d2 ], 2)\n",
+    "\n",
+    "    #net.module.encoder.lstm.flatten_parameters()\n",
+    "    lstm_outputs2, _ = net.module.encoder.lstm(h2) \n",
+    "    oo =  net.module.encoder.dropout(net.module.encoder.relu(net.module.encoder.fc(lstm_outputs2)))\n",
+    "\n",
+    "        #h = net.module.encoder.extract_features(video)\n",
+    "    net_classif_output2 = net.module.predict_from_encoder_features(oo)\n",
+    "\n",
+    "    return net_classif_output2, layer_feats, gradients"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "def run_model(net, input_tuple ):\n",
+    "    video, caption = input_tuple\n",
+    "    probs, classif_probs1 = net((video, caption), False)\n",
+    "    return classif_probs1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CAM calculating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "def calc_cam(net, net_output, layer_feats, target_index, vocab_size, gradients, frame_number):\n",
+    " \n",
+    "    one_hot = np.zeros((1, vocab_size), dtype=np.float32)\n",
+    "    one_hot[0][target_index] = 1\n",
+    "    one_hot = Variable(torch.from_numpy(one_hot), requires_grad=True)\n",
+    "    y_c = torch.sum(one_hot.cuda() * net_output)\n",
+    "\n",
+    "    net.module.encoder.c3d_extractor.conv6.zero_grad()\n",
+    "    #net.module.classif_layer.zero_grad()\n",
+    "    y_c.backward(retain_graph=True)\n",
+    "    print(\"backward\"*10)\n",
+    "\n",
+    "    grads_val = gradients[0].cpu().data.numpy() #take the only element out of gradients list\n",
+    "    feats_numpy = layer_feats.cpu().data.numpy()[0, :] #first sample of batch\n",
+    "    weights = np.mean(grads_val, axis=( 3, 4))[0, :, frame_number]   #grads_val: (1, 256, 48, 6, 6)\n",
+    "    cam = np.ones(feats_numpy.shape[1:], dtype=np.float32)\n",
+    "    weights = weights / weights.max()\n",
+    "    for ii, ww in enumerate(weights):\n",
+    "        cam += ww * feats_numpy[ii, :, :, :]\n",
+    "    cam_relu = np.maximum(cam, 0)\n",
+    "    return cam_relu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "path_to_video, _, classif_label = next(path_gen)\n",
+    "#path_to_video = '/data/20bn-something-something-v2/149631.webm'\n",
+    "\n",
+    "#classif_label = 47\n",
+    "\n",
+    "video_uint8 = reader.open(path_to_video)\n",
+    "video = preprocessor(video_uint8)\n",
+    "video = Variable(torch.from_numpy(video[None]), volatile=False).cuda()\n",
+    "empty_caption = Variable(torch.zeros([1, 1]), volatile=True).long().cuda()\n",
+    "\n",
+    "\n",
+    "vocab_size = 178\n",
+    "\n",
+    "\n",
+    "\n",
+    "all_cams = []\n",
+    "\n",
+    "\n",
+    "target_index =  classif_label\n",
+    "\n",
+    "##model\n",
+    "net_output  = run_model(net, (video, empty_caption))\n",
+    "_,predind  = torch.max(net_output, dim=1)\n",
+    "print(\"pppppp\"*10)\n",
+    "\n",
+    "\n",
+    "net2_output, layer_feats, gradients = run_model2(net,video )\n",
+    "s = 1/0\n",
+    "_, goh2 = torch.max(net2_output , dim=1)\n",
+    "\n",
+    "\n",
+    "print(int2label[classif_label])\n",
+    "print( [classif_label])\n",
+    "print( [predind.data.cpu().numpy()[0]])\n",
+    "print( [goh2.data.cpu().numpy()[0]])\n",
+    "print(\"*\"*15)\n",
+    "\n",
+    "for ff in range(1,video_uint8.shape[0]):\n",
+    "    print(ff)\n",
+    "    cam = calc_cam(net, net2_output, layer_feats, target_index, vocab_size, gradients, frame_number=ff)\n",
+    "    print(cam.shape)\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    single_cam = cam[ff,:,:]\n",
+    "    single_cam = cv2.resize(single_cam, (96, 96))\n",
+    "    single_cam = single_cam - np.min(single_cam)\n",
+    "    single_cam = single_cam / np.max(single_cam)\n",
+    "    plt.imshow(single_cam)\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.imshow(video_uint8[ff])\n",
+    "    plt.show()\n",
+    "    all_cams.append(single_cam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net2_output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unnormalize_op = UnNormalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
@@ -670,6 +686,24 @@
     "                                    os.path.join(output_images_folder_cam_combined, \"*\"),\n",
     "                                    path_to_combined_gif))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(all_cams)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
